# Creo

./: .gitignore  Cargo.toml  README.md
assets/handlers/python/login/: definition.yml  pyproject.toml
assets/handlers/python/login/src/login/: __init__.py  cache.py  db.py  login.py  models.py  read.py
assets/handlers/python/register/: definition.yml  pyproject.toml
assets/handlers/python/register/src/register/: __init__.py  create.py  db.py  models.py  read.py  register.py  unmarshal.py
assets/handlers/python/user_create/: definition.yml  pyproject.toml  utilization.yml
assets/handlers/python/user_create/src/create_user/: __init__.py  create.py  hash.py  models.py  unmarshal.py
assets/handlers/rust/invoice_update/: Cargo.toml  definition.yml  utilization.yml
assets/handlers/rust/invoice_update/src/: lib.rs  models.rs  unmarshal.rs
assets/handlers/rust/login/: Cargo.toml  definition.yml  utilization.yml
assets/handlers/rust/login/src/: cache.rs  hash.rs  lib.rs  models.rs
assets/handlers/rust/matrix/: Cargo.toml  definition.yml  utilization.yml
assets/handlers/rust/matrix/src/: lib.rs
assets/handlers/rust/user_create/: Cargo.toml  definition.yml  utilization.yml
assets/handlers/rust/user_create/src/: db.rs  hash.rs  lib.rs  models.rs  unmarshal.rs
assets/init-services/: init.sh
assets/init-services/rust/seed-register/: Cargo.toml  Dockerfile
assets/init-services/rust/seed-register/src/: db.rs  models.rs
assets/load_generator/: director.Dockerfile  docker-compose.yml  loadgenerator.Dockerfile
assets/scripts/: benchmark.sh  init.mgt  save_metrics.mgt  start.mgt  start_application.mgt  stop_application.mgt
config/: benchmark.yml  generate.yml  profile.yml
creo-lib/: Cargo.toml
creo-lib/src/: constants.rs  http_method.rs  lib.rs
creo-lib/src/application/: endpoint.rs  micro_service.rs  mod.rs  service_call.rs
creo-lib/src/compose/: application.rs  mod.rs  service.rs
creo-lib/src/de/: mod.rs  string.rs  vec.rs
creo-lib/src/de/json/: from_reader.rs  from_str.rs  mod.rs
creo-lib/src/de/yaml/: from_reader.rs  from_str.rs  mod.rs
creo-lib/src/dependencies/: mod.rs
creo-lib/src/dependencies/database/: mod.rs  mongo.rs
creo-lib/src/generator/: mod.rs
creo-lib/src/generator/core/: data_type.rs  file.rs  framework.rs  mod.rs  symbol.rs
creo-lib/src/generator/node/: data_type.rs  file_name.rs  local_deps.rs  mod.rs  symbol.rs
creo-lib/src/generator/node/frameworks/: express.rs  mod.rs
creo-lib/src/generator/python/: data_type.rs  file_name.rs  local_deps.rs  mod.rs  symbol.rs
creo-lib/src/generator/python/frameworks/: fastapi.rs  mod.rs
creo-lib/src/generator/rust/: data_type.rs  file_name.rs  local_deps.rs  mod.rs  symbol.rs
creo-lib/src/generator/rust/frameworks/: axum.rs  mod.rs
creo-lib/src/graph/: application_graph.rs  builder.rs  colored_graph.rs  di_graph.rs  error.rs  mod.rs
creo-lib/src/graph/algorithms/: mod.rs
creo-lib/src/graph/algorithms/coloring/: equitable.rs  error.rs  mod.rs
creo-lib/src/graph/algorithms/random/: gnm.rs  mod.rs
creo-lib/src/graph/iter/: color_node.rs  colors.rs  edges.rs  endpoint.rs  micro_services.rs  mod.rs  node_with_color.rs  nodes.rs  predecessor.rs  service_call.rs  service_endpoint.rs  successor.rs
creo-lib/src/handler/: arg_passing.rs  definition.rs  function.rs  mod.rs  param.rs  registry.rs  signature.rs
creo-lib/src/io/: application.rs  docker.rs  error.rs  handler_definitions.rs  handler_function.rs  load.rs  mod.rs  service.rs  supported_file_types.rs  util.rs  utilization.rs
creo-lib/src/load/: expressions.rs  mod.rs  models.rs
creo-lib/src/load/http_loadgenerator/: mod.rs
creo-lib/src/metrics/: cadvisor.rs  mod.rs  prometheus.rs
creo-lib/src/programming_language/: data_type.rs  dependency.rs  docker.rs  file.rs  mod.rs  random.rs  symbol.rs
creo-lib/src/programming_lanuage/: dependency.rs  file.rs  mod.rs  random.rs  symbol.rs
creo-lib/src/remote/: archive.rs  mod.rs  upload.rs
creo-lib/src/schema/: array_type.rs  mod.rs  object_type.rs  schema_kind.rs
creo-lib/src/selection/: bucket.rs  definition.rs  mod.rs  programming_language.rs  resource.rs  service_type.rs
creo-lib/src/service_types/: intensity.rs  mod.rs  resource.rs  resource_distribution.rs  resource_type.rs  service_type.rs  utilization.rs
creo-lib/src/ssh/: aggregate.rs  benchmark.rs  client.rs  config.rs  connection.rs  error.rs  mod.rs  path.rs  pull.rs
creo-lib/src/stats/: levene.rs  mod.rs
creo-lib/src/template/: dependencies.rs  docker.rs  faker.rs  import.rs  info.rs  main_file.rs  mod.rs  writer.rs
creo-lib/src/template/router/: mod.rs  models.rs
creo-lib/src/template/service_calls/: mod.rs  models.rs
creo-monitor/: .env  Cargo.toml  build.rs  creo-monitor-deployment.yaml  monitor.yaml
creo-monitor/_tests/: persist.rs
creo-monitor/_tests/dependencies/: mod.rs  mysql.rs
creo-monitor/migrations/: 20250624113551_create_container_stats.sql  20250707162332_create_container_metadata.sql
creo-monitor/src/: api.rs  error.rs  grpc.rs  lib.rs  main.rs  persistence.rs
creo-monitor/src/api/: models.rs
creo-monitor/src/cgroup/: collector.rs  mod.rs  utils.rs
creo-monitor/src/cgroup/stats/: cpu.rs  error.rs  memory.rs  mod.rs  net.rs  parser.rs
creo-monitor/src/container/: error.rs  metadata.rs  mod.rs  utils.rs
creo-monitor/src/discovery/: containerd.rs  mod.rs
creo-monitor/src/mountinfo/: detect.rs
creo-monitor/src/persistence/: error.rs  models.rs  mysql.rs  persister.rs
creo-monitor/src/stats/: cpu.rs  io.rs  memory.rs  mod.rs  net.rs  parser.rs
creo-monitor/tests/: persist.rs
docs/: architecture.md  getting_started.md  hybrid.md  hyprid.md  manual.md
docs/extension/: README.md  dependency.md  frameworks.md  handler_functions.md  profiling.md  programming_language.md
src/: error.rs  lib.rs  main.rs  util.rs
src/cli/: benchmark.rs  deploy.rs  download.rs  generate.rs  mod.rs  profile.rs
src/commands/: benchmark.rs  deploy.rs  download.rs  mod.rs
src/config/: application.rs  generate.rs  graph.rs  mod.rs
src/io/: config.rs  mod.rs  (+3 more)
(+389 files in other folders)
