[package]
name = "creo"
version = "0.1.0"
edition = "2021"

[workspace]
exclude = ["assets/handlers/rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
chrono = "0.4.38"
env_logger = "0.10.1"
futures = "0.3.31"
log = "0.4.20"
creo-lib = { path = "creo-lib" }
rand = "0.8.5"
rand_seeder = "0.2.3"
serde = { version = "1.0.201", features = ["derive"] }
strum = "0.25.0"
thiserror = "1.0.50"
tokio = "1.35.1"
lazy_errors = "0.9.0"
