[package]
name = "creo-lib"
version = "0.1.0"
edition = "2021"


[dependencies]
async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }
async-ssh2-tokio = "0.8.5"
chrono = "0.4.33"
csv = "1.3.0"
docker-compose-types = "0.6.1"
flate2 = "1.0.30"
futures = "0.3.31"
glob = "0.3.1"
handlebars = { version = "5.0.0", features = ["dir_source", "string_helpers"] }
indexmap = "2.1.0"
indicatif = { version = "0.17.9", features = ["tokio"] }
lazy_static = "1.4.0"
local-encoding = "0.2.0"
log = "0.4.20"
ndarray = "0.15.6"
openapiv3 = "2.0.0"
rand = "0.8.5"
rand_derive = "0.5.0"
reqwest = { version = "0.12.12", features = ["json"] }
russh-sftp = "2.0.0-beta.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9"
shellexpand = "3.1.0"
statrs = "0.16.0"
strum = "0.25.0"
strum_macros = "0.25.3"
tar = "0.4.41"
thiserror = "1.0.50"
tokio = { version = "1.35.1", features = ["fs"] }
tokio-tar = "0.3.1"
