[package]
name = "invoice_update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["now", "serde"] }
lazy_static = "1.5.0"
mongodb = "3.0.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_valid = "0.24.0"
tokio = "1.38.0"
