[package]
name = "login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["now", "serde"] }
lazy_static = "1.5.0"
mongodb = "3.0.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_valid = "0.24.0"
tokio = "1.38.0"

