[package]
name = "matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }

